# computer-sciences

./: .gitignore  IDE.md  LICENSE  LICENSE.md  README.md
Python/: README.md  pyproject.toml
Python/Units/: Unit P1 - Programming.pdf.REMOVED.git-id  Unit P2 - Numbers and Strings.pdf.REMOVED.git-id  Unit P3 - Decisions.pdf.REMOVED.git-id  Unit P4 - Loops.pdf.REMOVED.git-id  Unit P5 - Functions.pdf.REMOVED.git-id  Unit P6 - Lists and Tables.pdf.REMOVED.git-id  Unit P7 - Files.pdf.REMOVED.git-id  Unit P8 - Complex Data Structures.pdf.REMOVED.git-id  Unit PX - Architecture.pdf.REMOVED.git-id
Python/classes/: pyproject.toml
Python/classes/2020-21/: 20201020-format.py  20201021-01.py  20201021-03.py  20201021-04.py  20201021-05.py  20201026_richter_1.py  20201028_while_03.py  20201028_while_04-nested.py  20201028_while_06.py  20201028_while_10.py  20201104_simple-functions.py  20201116_find.py  20201202_file_1.py  20201202_file_2.py  20201202_file_4.py  20201202_try-execpt.py  20201207_try-execpt_1.py  20201209_dict.py  20201209_sets_1.py  20201216_modules_gargle.py  20210113_playfair.py  20211103_pi.py  20211103_simulation.py
Python/classes/2021-22/: 20211015_equations-1.py  20211015_kb-sale.py  20211022_average.py  20211022_count.py  20211029_multiplication.py  20211029_pirate-song_2.py  20211029_powtable.py  20211029_strings.py  20211105_eq1_take2.py  20211105_eq2.py  20211124_reverse.py  20211126_words.py  20211210_courses.lst  20211217_births.py  20220114_map.txt  20220114_piramids.py  20220114_recipes.py
Python/classes/2022-23/: 20221011_tiles.py  20221011_time.py  20221014_equation.py  20221021_fibonacci.py  20221021_sum-nums.py  20221028-nim_1-2.py  20221118_nums.py  20221122_slurp-files.py  20221125_car-parking (take2).py  20221125_car-parking.py  20221129_play-dice.py  20221129_play-dice_take2.py  20221220_csv.py  CSC1.txt  classes.txt  test.csv
Python/classes/2023-24/: 20231013 fibonacci.py  20231013 seasons.py  20231013 seasons2.py  20231013 while.py  20231017 f-strings.py  20231017 if-else.py  20231020 interest-rate.py  20231020 sum-2.py  20231020 user-avg-2.py  20231020 user-avg.py  my_lib.py  (+17 more)
Python/exams/: README.md
Python/src/: 20201020-format.py  20201021-01.py  20201021-02.py  20201021-03.py  20201021-04.py  20201021-05.py  20201021-06.py  20201026_richter-1.py  20201026_richter_2.py  20201026_tax-1.py  20201026_tax-2.py  20201026_tax-3.py  20201026_tax_4.py  20201028_for.py  20201028_while-01.py  20201028_while-02.py  20201028_while-03.py  20201028_while-04_nested.py  20201028_while-05.py  20201028_while-10.py  20201028_while_06.py  20201028_while_07.py  20201028_while_08.py  20201028_while_09.py  20201102_functions.py  20201104_main.py  20201104_simple-functions.py  20201109_lists-1.py  20201109_lists-3.py  20201109_lists_2.py  20201109_lists_4.py  20201111_my-index-1.py  20201111_my-index_2.py  20201111_print-list.py  20201111_slices.py  20201116_find.py  20201116_join.py  20201116_minmax.py  20201116_remove-1.py  20201116_remove_2.py  (+42 more)
Python/units/: Unit P0 - Course Introduction.pdf.REMOVED.git-id
(+1322 files in other folders)
