# Copyright © 2024 Giovanni Squillero <squillero@polito.it>
# https://github.com/squillero/computer-sciences
# Free under certain conditions — see the license for details.

[tool.black]
    exclude     = "(^\\.|^__pycache__)"
    include     = "\\.py$"
    line-length = 120

[tool.poetry]
    authors      = ["Giovanni Squillero <giovanni.squillero@polito.it>"]
    description  = "Clean environment for Computater Sciences"
    license      = "proprietary"
    package-mode = false

    [tool.poetry.dependencies]
        python   = "^3.10"
        black    = "^24.4.2"
        icecream = "^2.1.3"

    [tool.poetry.dev-dependencies]

[tool.ruff]
    line-length    = 120
    extend-include = ["*.ipynb"]

    [tool.ruff.format]
        quote-style                = "preserve"
        docstring-code-line-length = 76

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
