# Copyright © Giovanni Squillero <squillero@polito.it>
# https://github.com/squillero/computer-sciences
# Free under certain conditions — see the license for details.

[project]
    name = "cs"
    version = "2026.1"
    description = "Code bites from Computer Sciences @ Politecnico di Torino"
    authors = [
        { name = "Giovanni Squillero", email = "giovanni.squillero@polito.it" },
    ]
    readme = "README.md"
    license = "licenseRef-SQUILLERO-1.2"
    license-files = ["LICENSE.md"]
    requires-python = ">=3.10"
    dependencies = ["icecream (>=2.1.10,<3.0.0)"]

    [project.urls]
        GitHub = "https://github.com/squillero/computer-sciences"

[build-system]
    requires      = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"
